# MLops-Car-price

./: .gitignore  DockerFile  Dockerfile  README.md  docker-compose.yml  frontend.py  pyproject.toml
app/: main.py
app/api/: router_auth.py
app/cache/: redis_cache.py
app/core/: config.py  dependencies.py  exceptions.py  security.py
app/services/: model_service.py
notebooks/: car-price.ipynb  car_price.ipynb
training/: train_models.py
